--- a/package.json
+++ b/package.json
@@ -27,14 +27,17 @@
     "@types/mongoose": "^5.11.97",
     "@types/next": "^9.0.0",
     "@types/react-hot-loader": "^4.1.1",
+    "add": "^2.0.6",
     "mongoose": "^6.2.10",
+    "nest-next": "^9.6.0",
     "next": "^12.1.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hot-loader": "^4.13.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "yarn": "^1.22.18"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
