--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^5.2.1",
     "@types/mongoose": "^5.11.97",
     "@types/next": "^9.0.0",
     "@types/react-hot-loader": "^4.1.1",
-    "add": "^2.0.6",
+    "antd": "^4.19.5",
     "mongoose": "^6.2.10",
     "nest-next": "^9.6.0",
     "next": "^12.1.4",
@@ -37,6 +38,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.3.0",
     "yarn": "^1.22.18"
   },
   "devDependencies": {
