--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mongoose": "^9.0.3",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.1",
-    "@types/mongoose": "^5.11.97",
     "@types/next": "^9.0.0",
     "@types/react-hot-loader": "^4.1.1",
     "antd": "^4.19.5",
