--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,21 +13,16 @@
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
-    "lib": [
-      "es2017",
-      "dom",
-      "dom.iterable",
-    ],
+    "lib": ["es2017", "dom", "dom.iterable"],
     "strictNullChecks": false,
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "isolatedModules": true,
+    // "isolatedModules": true,
     "resolveJsonModule": true,
     "moduleResolution": "node",
-    "esModuleInterop": true,
-
+    "esModuleInterop": true
   },
   "include": ["src/server/", "src/server/main.ts"],
   "exclude": ["src/client/"]
