--- a/package.json
+++ b/package.json
@@ -28,16 +28,20 @@
     "@nestjs/swagger": "^5.2.1",
     "@types/next": "^9.0.0",
     "@types/react-hot-loader": "^4.1.1",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
     "antd": "^4.19.5",
     "mongoose": "^6.2.10",
     "nest-next": "^9.6.0",
     "next": "^12.1.4",
+    "node-sass": "^7.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hot-loader": "^4.13.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "sass": "^1.50.0",
     "swagger-ui-express": "^4.3.0",
     "yarn": "^1.22.18"
   },
