--- a/package.json
+++ b/package.json
@@ -21,16 +21,21 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/mongoose": "^9.0.3",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.1",
+    "@types/ejs": "^3.1.0",
+    "@types/markdown-it": "^12.2.3",
     "@types/next": "^9.0.0",
     "@types/react-hot-loader": "^4.1.1",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "antd": "^4.19.5",
+    "ejs": "^3.1.6",
+    "markdown-it": "^12.3.2",
     "mongoose": "^6.2.10",
     "nest-next": "^9.6.0",
     "next": "^12.1.4",
@@ -43,6 +48,8 @@
     "rxjs": "^7.2.0",
     "sass": "^1.50.0",
     "swagger-ui-express": "^4.3.0",
+    "toml": "^3.0.0",
+    "typeorm": "^0.3.6",
     "yarn": "^1.22.18"
   },
   "devDependencies": {
