--- a/package.json
+++ b/package.json
@@ -35,7 +35,11 @@
     "@zeit/next-sass": "^1.0.1",
     "antd": "^4.19.5",
     "ejs": "^3.1.6",
+    "highlight.js": "^11.5.1",
     "markdown-it": "^12.3.2",
+    "markdown-it-anchor": "^8.6.2",
+    "markdown-it-emoji": "^2.0.0",
+    "markdown-it-highlightjs": "^4.0.1",
     "mongoose": "^6.2.10",
     "nest-next": "^9.6.0",
     "next": "^12.1.4",
